search: don't keep the last panel last in the sort order

Previously, we kept the last panel in the configured order last,
after non configured ones.This would assign a sort order to the last
panle that would place it in the middle, but visually sort it last,
and that caused problems when moving it (it would jump into an apparently
random position in the middle, according to the sort ID, and would
move the nearby provider too).

https://bugzilla.gnome.org/show_bug.cgi?id=694975